// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-empty-source ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 1,
    "line": 1,
    "rule": "no-empty-source",
    "severity": "error",
    "text": "Unexpected empty source (no-empty-source)",
  },
]
`;

exports[`no-empty-source ошибки индекс теста: 0 2`] = `Array []`;

exports[`no-empty-source ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 3,
    "endLine": 1,
    "line": 1,
    "rule": "no-empty-source",
    "severity": "error",
    "text": "Unexpected empty source (no-empty-source)",
  },
]
`;

exports[`no-empty-source ошибки индекс теста: 1 2`] = `Array []`;

exports[`no-empty-source ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 4,
    "endLine": 1,
    "line": 1,
    "rule": "no-empty-source",
    "severity": "error",
    "text": "Unexpected empty source (no-empty-source)",
  },
]
`;

exports[`no-empty-source ошибки индекс теста: 2 2`] = `Array []`;

exports[`no-empty-source ошибки индекс теста: 3 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 2,
    "line": 1,
    "rule": "no-empty-source",
    "severity": "error",
    "text": "Unexpected empty source (no-empty-source)",
  },
]
`;

exports[`no-empty-source ошибки индекс теста: 3 2`] = `Array []`;
